demo/force-app/main/default/objects/Account/fields/Account_Health_Old__c.field-meta.xml
<CustomField>
    <fullName>Account_Health_Old__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Account Health (Old)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>