demo/force-app/main/default/objects/Account/fields/Discount_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Discount_Legacy__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Discount (Legacy)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>