demo/force-app/main/default/objects/Account/fields/Fax_Backup__c.field-meta.xml
<CustomField>
    <fullName>Fax_Backup__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Fax Backup</label>
    <length>50</length>
    <type>Text</type>
</CustomField>