demo/force-app/main/default/objects/Account/fields/Legacy_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Owner_Email__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Legacy Owner Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>