demo/force-app/main/default/objects/Account/fields/Legacy_Region__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Region__c</fullName>
    <description>Region from the 2021 territory project (replaced by Territory Management).</description>
    <label>Legacy Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>