demo/force-app/main/default/objects/Account/fields/Legacy_Segment__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Segment__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Legacy Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>