demo/force-app/main/default/objects/Account/fields/Old_Rating__c.field-meta.xml
<CustomField>
    <fullName>Old_Rating__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Old Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>