demo/force-app/main/default/objects/Account/fields/Old_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Territory_Code__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Old Territory Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>