demo/force-app/main/default/objects/Account/fields/Old_Tier__c.field-meta.xml
<CustomField>
    <fullName>Old_Tier__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Old Tier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>