demo/force-app/main/default/objects/Account/fields/Partner_Tier_Old__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tier_Old__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Partner Tier (Old)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>