demo/force-app/main/default/objects/Account/fields/Pilot_Program__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Program__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Pilot Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>