demo/force-app/main/default/objects/Account/fields/Promo_Code_2019__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code_2019__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Promo Code 2019</label>
    <length>50</length>
    <type>Text</type>
</CustomField>