demo/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Current sales region.</description>
    <label>Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>