demo/force-app/main/default/objects/Account/fields/Region_Label__c.field-meta.xml
<CustomField>
    <fullName>Region_Label__c</fullName>
    <description>Display label for the legacy region.</description>
    <formula>IF(ISBLANK(Legacy_Region__c), &quot;Unassigned&quot;, Legacy_Region__c)</formula>
    <label>Region Label</label>
    <type>Text</type>
</CustomField>