demo/force-app/main/default/objects/Account/fields/Region_New__c.field-meta.xml
<CustomField>
    <fullName>Region_New__c</fullName>
    <description>Duplicate of Region created during the 2024 migration.</description>
    <label>Region (New)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>