demo/force-app/main/default/objects/Account/fields/Survey_Score_2020__c.field-meta.xml
<CustomField>
    <fullName>Survey_Score_2020__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Survey Score 2020</label>
    <length>50</length>
    <type>Text</type>
</CustomField>