demo/force-app/main/default/objects/Account/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <description>Written by the ERP integration on every sync.</description>
    <label>Sync Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>