demo/force-app/main/default/objects/Account/fields/Temp_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_Import_Id__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Temp Import Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>