demo/force-app/main/default/objects/Account/fields/Trade_Show_Lead__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_Lead__c</fullName>
    <description>Unused. Candidate for Sunset.</description>
    <label>Trade Show Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>