demo/force-app/main/default/objects/Account/validationRules/Region_Required_For_Enterprise.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_Required_For_Enterprise</fullName>
    <active>true</active>
    <description>Enterprise accounts needed a legacy region (2021 territory project).</description>
    <errorConditionFormula>AND(ISPICKVAL(Type, &quot;Enterprise&quot;), ISBLANK(Legacy_Region__c))</errorConditionFormula>
    <errorMessage>Enterprise accounts need a Legacy Region.</errorMessage>
</ValidationRule>