demo/force-app/main/default/objects/Account/listViews/By_Region.listView-meta.xml
<ListView>
    <fullName>By_Region</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Legacy_Region__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>By Region</label>
</ListView>